@@ -45,9 +45,7 @@ import java.io.FileFilter;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.lang.reflect.Field;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLClassLoader;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -63,17 +61,13 @@ public enum OtcRegistryImpl implements OtcRegistry {
 	private static final Logger LOGGER = LoggerFactory.getLogger(OtcRegistryImpl.class);
 
 	/** The map packaged otc dtos. */
-	private Map<String, RegistryDto> mapPackagedOtcDtos = new HashMap<>();
+	private static final Map<String, RegistryDto> mapPackagedOtcDtos = new HashMap<>();
 
 	/** The Constant depFileFilter. */
-	private static final FileFilter depFileFilter = CommonUtils.createFilenameFilter(OtcConstants.OTC_TMD_EXTN);
+	private static final FileFilter tmdFileFilter = CommonUtils.createFilenameFilter(OtcConstants.OTC_TMD_EXTN);
 
 	/** The Constant objectMapper. */
 	private static final ObjectMapper objectMapper = new ObjectMapper();
-
-	/** The Constant clzLoader. */
-	private static final URLClassLoader clzLoader = OtcConfig.getTargetClassLoader();
-	private static final String OTC_TARGET_FOLDER = OtcConfig.getTargetDirectoryPath();
 
 	/**
 	 * Instantiates a new otc registry impl.
@@ -86,18 +80,8 @@ public enum OtcRegistryImpl implements OtcRegistry {
 	 */
 	@Override
 	public void register() {
-		File directory;
-		if (OtcConfig.isDefaultLocations()) {
-			directory = new File(OtcConfig.getOtcTmdDirectoryPath());
-		} else {
-			URL tmdUrl = this.getClass().getClassLoader().getResource(OtcConfig.OTC_TMD_FOLDER);
-			try {
-				directory = new File(tmdUrl.toURI());
-			} catch (URISyntaxException e) {
-				throw new RegistryException("", "Unable to load '.tmd' files...", e);
-			}
-		}
-		File[] files = directory.listFiles(depFileFilter);
+		File directory = new File(OtcConfig.getClasspathTmdLocation());
+		File[] files = directory.listFiles(tmdFileFilter);
 		if (files == null) {
 			return;
 		}
@@ -110,7 +94,7 @@ public enum OtcRegistryImpl implements OtcRegistry {
 			}
 			try (FileInputStream fis = new FileInputStream(file)) {
 				byte[] contents = new byte[fis.available()];
-				fis.read(contents);
+				int bytesRead = fis.read(contents);
 				RegistryDto registryDto = objectMapper.readValue(contents, RegistryDto.class);
 				if (registryDto.hasError) {
 					LOGGER.error(
@@ -198,19 +182,14 @@ public enum OtcRegistryImpl implements OtcRegistry {
 		} catch (OtcUnsupportedJdkException ex) {
 			throw ex;
 		} catch (Exception ex) {
-			try {
-				mainClz = clzLoader.loadClass(mainClass);
-				LOGGER.info("Found entry file {} in {} ", mainClass, OTC_TARGET_FOLDER);
-			} catch (Exception e) {
-				LOGGER.error("Could not load entry file {} ", mainClass);
-				throw new OtcException("", e);
-			}
+			LOGGER.error("Could not load entry file {} ", mainClass);
+			throw new OtcException("", ex);
 		}
 		CodeExecutor codeExecutor;
 		try {
-			codeExecutor = (CodeExecutor) mainClz.newInstance();
+			codeExecutor = (CodeExecutor) mainClz.getDeclaredConstructor().newInstance();
 			registryDto.codeExecutor = codeExecutor;
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			throw new OtcException("", e);
 		}
 		mapPackagedOtcDtos.put(registryDto.registryId, registryDto);
@@ -254,7 +233,7 @@ public enum OtcRegistryImpl implements OtcRegistry {
 		RegistryDto registryDto = mapPackagedOtcDtos.get(registryId);
 		if (registryDto == null) {
 			throw new RegistryException("",
-					"OTC registry with ID '" + registryId + "' not found or not compiled and registered!");
+					"OTCS file '" + registryId + ".otcs' not compiled and registered!");
 		}
 		return registryDto;
 	}
